1. make classes and use oops
10. make new file for all colors
11. check condition of removing flames
15. inheritence
18. sound
23. condition of hitting bullet to bossenemy is not correct
35. polymorphism
36. bossenemy bullet position should be acc to player aimed at player
38. add more pics for proper wiggle
42. dragon vanishing without collision sometimes
43. decrease speed of game 
44. reduce complexity of checking for coins and bullets