@@ -10,3 +10,4 @@
 42. dragon vanishing without collision sometimes
 43. decrease speed of game 
 44. reduce complexity of checking for coins and bullets
+45. player is vibrating
